--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -182,6 +182,7 @@
           android:layout_height="0dp"
           android:layout_centerInParent="true"
           android:orientation="vertical"
+          android:overScrollMode="never"
           android:paddingStart="16dp"
           android:paddingTop="8dp"
           android:paddingEnd="16dp"
