--- a/app/src/main/res/layout/payment_methods_layout.xml
+++ b/app/src/main/res/layout/payment_methods_layout.xml
@@ -124,6 +124,7 @@
               android:layout_height="216dp"
               android:layout_centerInParent="true"
               android:orientation="vertical"
+              android:overScrollMode="never"
               android:paddingStart="16dp"
               android:paddingTop="8dp"
               android:paddingEnd="16dp"
