--- a/app/src/main/res/layout/selected_payment_method.xml
+++ b/app/src/main/res/layout/selected_payment_method.xml
@@ -30,7 +30,7 @@
       android:layout_marginEnd="@dimen/big_margin"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="@id/payment_method_ic"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/payment_method_fee"
       app:layout_constraintStart_toEndOf="@id/payment_method_ic"
       app:layout_constraintTop_toTopOf="@id/payment_method_ic"
       tools:text="APPC"
@@ -62,9 +62,45 @@
       android:text="@string/purchase_appcoins_credits_default_body"
       android:textColor="#727272"
       app:layout_constraintBottom_toBottomOf="@+id/payment_method_ic"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/payment_method_fee"
       app:layout_constraintStart_toStartOf="@+id/payment_method_description"
       app:layout_constraintTop_toBottomOf="@+id/payment_method_description_single"
       />
+
+  <LinearLayout
+      android:id="@+id/payment_method_fee"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="16dp"
+      android:orientation="vertical"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="@id/payment_method_ic"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1"
+      app:layout_constraintTop_toTopOf="@+id/payment_method_ic"
+      tools:visibility="visible"
+      >
+
+    <TextView
+        android:id="@+id/payment_method_fee_value"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:layout_gravity="end"
+        android:textColor="@color/appc_pink"
+        android:textSize="11sp"
+        tools:text="23 €"
+        />
+
+    <TextView
+        android:id="@+id/payment_method_fee_label"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:layout_gravity="end"
+        android:text="@string/activity_iab_fees"
+        android:textColor="@color/top_up_bonus_text"
+        android:textSize="11sp"
+        />
+
+  </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
