--- a/app/src/main/res/layout-land/layout_phone_validation.xml
+++ b/app/src/main/res/layout-land/layout_phone_validation.xml
@@ -57,11 +57,12 @@
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:ccpDialog_backgroundColor="#FAFAFA"
+        app:ccpDialog_backgroundColor="@color/activity_background_color"
         app:ccpDialog_textColor="#000000"
         app:ccp_arrowColor="@color/colorAccent"
         app:ccp_arrowSize="30dp"
         app:ccp_autoDetectCountry="true"
+        app:ccp_padding="0dp"
         app:ccp_textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/mid_guideline"
@@ -127,30 +128,31 @@
     <Button
         android:id="@+id/next_button"
         style="@style/ButtonStyle.Alternative"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
         android:minWidth="169dp"
         android:text="@string/action_next"
         android:textColor="@color/white"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cancel_button"
         app:layout_constraintTop_toBottomOf="@id/disclaimer_layout"
+        app:layout_constraintVertical_bias="0"
         />
 
     <Button
         android:id="@+id/cancel_button"
         style="@style/CancelBorderlessButtonStyle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
         android:minWidth="169dp"
         android:text="@string/do_it_later_button"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/next_button"
         app:layout_constraintEnd_toStartOf="@+id/next_button"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toEndOf="@id/mid_guideline"
         app:layout_constraintTop_toTopOf="@id/next_button"
         />
 
