--- a/app/src/main/res/layout/fragment_phone_validation.xml
+++ b/app/src/main/res/layout/fragment_phone_validation.xml
@@ -49,7 +49,7 @@
       android:layout_marginStart="40dp"
       android:layout_marginTop="22dp"
       android:layout_marginEnd="40dp"
-      app:ccpDialog_backgroundColor="#FAFAFA"
+      app:ccpDialog_background="@drawable/ccp_background"
       app:ccpDialog_textColor="#000000"
       app:ccp_arrowColor="@color/colorAccent"
       app:ccp_arrowSize="30dp"
