--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -16,6 +16,13 @@
       android:key="pref_permissions"
       android:layout="@layout/preference_without_summary_layout"
       android:title="@string/permissions_title" />
+
+  <Preference
+      android:icon="@drawable/ic_settings_fingerprint"
+      android:key="pref_fingerprint"
+      android:layout="@layout/preference_without_summary_layout"
+      android:title="Fingerprint" />
+
   <Preference
       android:icon="@drawable/ic_settings_redeem"
       android:key="pref_redeem"
