--- a/app/src/main/res/layout-land/layout_validation_result.xml
+++ b/app/src/main/res/layout-land/layout_validation_result.xml
@@ -22,12 +22,11 @@
       android:layout_width="wrap_content"
       android:layout_height="96dp"
       android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="@dimen/normal_margin"
+      android:layout_marginTop="@dimen/big_margin"
       android:layout_marginEnd="@dimen/big_margin"
-      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/validate_code_text"
       app:lottie_enableMergePathsForKitKatAndAbove="true"
       app:lottie_loop="true"
       app:lottie_rawRes="@raw/transact_loading_animation"
