[MOB-721] Updated landscape layouts for generic wallet validation

--- a/app/src/main/res/layout-land/layout_code_validation.xml
+++ b/app/src/main/res/layout-land/layout_code_validation.xml
@@ -51,7 +51,8 @@
         style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginStart="@dimen/half_large_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center_horizontal"
         android:text="@string/verification_insert_code_title"
         android:textColor="@color/color_title"
@@ -65,9 +66,9 @@
         style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginStart="@dimen/half_large_margin"
         android:layout_marginTop="11dp"
-        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center_horizontal"
         android:text="@string/referral_verification_body"
         android:textColor="#727272"
@@ -82,8 +83,8 @@
         layout="@layout/sms_text_input_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/half_large_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/mid_guideline"
         app:layout_constraintTop_toBottomOf="@id/top_guideline"
@@ -94,7 +95,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="16dp"
         android:gravity="center"
         android:textColor="@color/colorAccent"
         android:textSize="10sp"
@@ -114,7 +114,6 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
         android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:text="@string/verification_insert_code_resend_button"
         android:textAllCaps="true"
@@ -137,8 +136,8 @@
         android:id="@+id/disclaimer_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/half_large_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/mid_guideline"
@@ -168,8 +167,8 @@
         style="@style/ButtonStyle.Alternative"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="16dp"
-        android:minWidth="169dp"
+        android:layout_marginEnd="@dimen/half_large_margin"
+        android:minWidth="120dp"
         android:text="@string/submit_button"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -184,7 +183,7 @@
         style="@style/CancelBorderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
-        android:minWidth="169dp"
+        android:minWidth="120dp"
         android:text="@string/back_button"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/submit_button"
