--- a/app/src/main/res/layout-land/layout_phone_validation.xml
+++ b/app/src/main/res/layout-land/layout_phone_validation.xml
@@ -24,8 +24,8 @@
         style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/big_margin"
-        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginStart="@dimen/half_large_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center_horizontal"
         android:text="@string/verification_insert_phone_title"
         android:textColor="@color/color_title"
@@ -39,9 +39,9 @@
         style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginStart="@dimen/half_large_margin"
         android:layout_marginTop="11dp"
-        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center_horizontal"
         android:text="@string/referral_verification_body"
         android:textColor="#727272"
@@ -55,8 +55,8 @@
         android:id="@+id/ccp"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/half_large_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         app:ccpDialog_backgroundColor="@color/activity_background_color"
         app:ccpDialog_textColor="#000000"
         app:ccp_arrowColor="@color/colorAccent"
@@ -73,8 +73,8 @@
         android:id="@+id/phone_number_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/half_large_margin"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:hint="@string/verification_insert_phone_field_number"
         android:theme="@style/TextInputLayoutAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,9 +97,9 @@
         android:id="@+id/disclaimer_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="@dimen/half_large_margin"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,9 +131,9 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:layout_marginBottom="24dp"
-        android:minWidth="169dp"
+        android:minWidth="120dp"
         android:text="@string/action_next"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -148,7 +148,7 @@
         style="@style/CancelBorderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
-        android:minWidth="169dp"
+        android:minWidth="120dp"
         android:text="@string/do_it_later_button"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/next_button"
