--- a/app/src/main/res/layout-land/layout_code_validation.xml
+++ b/app/src/main/res/layout-land/layout_code_validation.xml
@@ -31,14 +31,13 @@
 
     <TextView
         android:id="@+id/code_validation_title"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
+        style="@style/WalletValidationTextStyle.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/half_large_margin"
         android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center_horizontal"
         android:text="@string/verification_insert_code_title"
-        android:textColor="@color/color_title"
         app:layout_constraintEnd_toStartOf="@+id/mid_guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_guideline"
@@ -46,7 +45,7 @@
 
     <TextView
         android:id="@+id/code_validation_subtitle"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+        style="@style/WalletValidationTextStyle.Subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/half_large_margin"
@@ -54,7 +53,6 @@
         android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center_horizontal"
         android:text="@string/referral_verification_body"
-        android:textColor="#727272"
         app:layout_constraintEnd_toStartOf="@+id/mid_guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/code_validation_title"
@@ -129,12 +127,11 @@
           />
 
       <TextView
-          style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+          style="@style/WalletValidationTextStyle.Tooltip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="start"
           android:text="@string/verification_insert_phone_security_disclaimer"
-          android:textSize="10sp"
           />
 
     </LinearLayout>
