--- a/app/src/main/res/layout/layout_phone_validation.xml
+++ b/app/src/main/res/layout/layout_phone_validation.xml
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/phone_validation_title"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
+        style="@style/WalletValidationTextStyle.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/big_margin"
@@ -37,7 +37,7 @@
 
     <TextView
         android:id="@+id/phone_validation_subtitle"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+        style="@style/WalletValidationTextStyle.Subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/big_margin"
@@ -45,7 +45,6 @@
         android:layout_marginEnd="@dimen/big_margin"
         android:gravity="center_horizontal"
         android:text="@string/referral_verification_body"
-        android:textColor="#727272"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phone_validation_title"
@@ -132,12 +131,11 @@
           />
 
       <TextView
-          style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+          style="@style/WalletValidationTextStyle.Tooltip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="start"
           android:text="@string/verification_insert_phone_security_disclaimer"
-          android:textSize="10sp"
           />
 
     </LinearLayout>
