--- a/app/src/main/res/layout-land/layout_phone_validation.xml
+++ b/app/src/main/res/layout-land/layout_phone_validation.xml
@@ -51,7 +51,7 @@
 
 
     <com.hbb20.CountryCodePicker
-        android:id="@+id/ccp"
+        android:id="@+id/country_code_picker"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="@dimen/half_large_margin"
@@ -78,7 +78,7 @@
         android:theme="@style/TextInputLayoutAppearance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/mid_guideline"
-        app:layout_constraintTop_toBottomOf="@id/ccp"
+        app:layout_constraintTop_toBottomOf="@id/country_code_picker"
         >
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/phone_number"
