--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,4 +3,9 @@
   <domain-config cleartextTrafficPermitted="true">
     <domain includeSubdomains="true">pool.img.aptoide.com</domain>
   </domain-config>
+  <debug-overrides>
+    <trust-anchors>
+      <certificates src="user" />
+    </trust-anchors>
+  </debug-overrides>
 </network-security-config>
