[MOB-865] Refactored promotions screen

--- a/app/src/main/res/layout/activity_promotions.xml
+++ b/app/src/main/res/layout/activity_promotions.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
   <include
       android:id="@+id/app_bar"
-      layout="@layout/layout_app_bar_large_size"
+      layout="@layout/layout_app_bar"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:layout_constraintStart_toStartOf="parent"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       />
 
@@ -21,6 +19,6 @@
       android:layout_marginTop="?attr/actionBarSize"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      >
-  </FrameLayout>
+      />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
