--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -563,5 +563,35 @@
     <item name="android:textSize">10sp</item>
   </style>
 
+  <style name="Promotions.TextStyle.Category.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">#e7000000</item>
+    <item name="android:textSize">14sp</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Category.Subtitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">#8a000000</item>
+    <item name="android:textSize">12sp</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">#01131f</item>
+    <item name="android:textSize">12sp</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Title.Disabled" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">#01131f</item>
+    <item name="android:textSize">12sp</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Date" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">#01131f</item>
+    <item name="android:textSize">11sp</item>
+  </style>
+
+  <style name="Promotions.TextStyle.Links" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">#ffffff</item>
+    <item name="android:textSize">11sp</item>
+  </style>
+
 
 </resources>
