--- a/app/src/main/res/layout/item_promotions_referrals.xml
+++ b/app/src/main/res/layout/item_promotions_referrals.xml
@@ -17,65 +17,75 @@
       >
 
     <ImageView
-        android:id="@+id/default_icon"
+        android:id="@+id/referral_icon"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginTop="@dimen/normal_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_promotions_default"
+        app:srcCompat="@drawable/ic_promotions_default"
         />
 
 
     <TextView
-        android:id="@+id/default_title"
+        android:id="@+id/referral_title"
         style="@style/Promotions.TextStyle.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="@dimen/normal_margin"
         android:layout_marginEnd="@dimen/big_margin"
-        app:layout_constraintBottom_toBottomOf="@+id/default_icon"
+        android:text="@string/referral_view_title_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/default_icon"
-        app:layout_constraintTop_toTopOf="@+id/default_icon"
-        tools:text="Spend 200 Appcoins in 5 days and earn a bonus of 120 AppCoins Credits"
+        app:layout_constraintStart_toEndOf="@id/referral_icon"
+        app:layout_constraintTop_toTopOf="@+id/referral_icon"
+        />
+
+    <TextView
+        android:id="@+id/referral_subtitle"
+        style="@style/Promotions.TextStyle.Subtitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="@dimen/normal_margin"
+        android:layout_marginEnd="@dimen/big_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/referral_icon"
+        app:layout_constraintTop_toBottomOf="@id/referral_title"
+        tools:text="You'll receive $2 worth of AppCoins Credits for each friend. Just share the link!"
         />
 
     <LinearLayout
-        android:id="@+id/default_container_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/normal_margin"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="@dimen/big_margin"
-        android:background="@drawable/promotions_date_background"
+        android:background="?attr/selectableItemBackground"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/default_icon"
+        app:layout_constraintTop_toBottomOf="@id/referral_subtitle"
         >
 
-      <ImageView
-          android:layout_width="12dp"
-          android:layout_height="12dp"
-          android:layout_gravity="center_vertical"
-          android:layout_marginStart="@dimen/normal_margin"
-          android:layout_marginEnd="6dp"
-          app:srcCompat="@drawable/ic_info_grey"
-          />
-
-      <TextView
-          android:id="@+id/default_expiry_date"
-          style="@style/Promotions.TextStyle.Date"
+      <Button
+          android:id="@+id/details_button"
+          style="?android:attr/borderlessButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_marginEnd="5dp"
+          android:fontFamily="sans-serif-medium"
+          android:minWidth="80dp"
+          android:text="@string/referral_view_share_link_button"
+          android:textColor="@color/text_button_color"
+          android:textSize="12sp"
+          />
+
+      <ImageView
+          android:id="@+id/share_button"
+          style="?android:attr/borderlessButtonStyle"
+          android:layout_width="40dp"
+          android:layout_height="40dp"
           android:layout_gravity="center_vertical"
-          android:layout_marginEnd="@dimen/big_margin"
-          android:ellipsize="end"
-          android:maxLines="2"
-          tools:text="The promotion ends in 2 days"
+          android:src="@drawable/ic_share_selector"
           />
 
     </LinearLayout>
