--- a/app/src/main/res/drawable/rectangle_outline_red.xml
+++ b/app/src/main/res/drawable/rectangle_outline_red.xml
@@ -5,9 +5,9 @@
   <!-- View border color and width -->
   <stroke
       android:width="1dp"
-      android:color="#e44b46"></stroke>
+      android:color="#e44b46" />
 
   <!-- The radius makes the corners rounded -->
-  <corners android:radius="3dp"></corners>
+  <corners android:radius="3dp" />
 
 </shape>
