--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -114,7 +114,7 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/big_margin"
-          android:layout_marginTop="15dp"
+          android:layout_marginTop="20dp"
           android:layout_marginEnd="@dimen/big_margin"
           android:visibility="invisible"
           app:layout_constraintEnd_toEndOf="@id/mid_guideline"
@@ -124,6 +124,23 @@
           app:layout_constraintVertical_chainStyle="packed"
           tools:visibility="visible"
           />
+
+      <include
+          android:id="@+id/level_up_bonus_layout"
+          layout="@layout/level_up_bonus_layout"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/big_margin"
+          android:layout_marginTop="15dp"
+          android:layout_marginEnd="@dimen/big_margin"
+          android:visibility="gone"
+          app:layout_constraintEnd_toEndOf="@id/mid_guideline"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
+          app:layout_constraintVertical_bias="1"
+          app:layout_constraintVertical_chainStyle="packed"
+          />
+
 
       <TextView
           android:id="@+id/bonus_msg"
@@ -153,6 +170,7 @@
           app:layout_constraintStart_toStartOf="@id/bonus_layout"
           app:layout_constraintTop_toTopOf="@id/bonus_layout"
           />
+
       <include
           android:id="@+id/bonus_msg_skeleton"
           layout="@layout/skeleton_rounded_rectangle"
@@ -263,7 +281,7 @@
           android:id="@+id/bottom_separator_buttons"
           android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:layout_marginTop="224dp"
+          android:layout_marginTop="232dp"
           android:background="@color/layout_separator_color"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
