--- a/app/src/main/res/layout/payment_methods_layout.xml
+++ b/app/src/main/res/layout/payment_methods_layout.xml
@@ -228,80 +228,96 @@
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginBottom="32dp"
             android:background="@color/layout_separator_color"
-            app:layout_constraintBottom_toTopOf="@id/bonus_layout"
+            app:layout_constraintBottom_toTopOf="@id/bonuses_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/content_main"
             tools:visibility="visible"
             />
 
-        <include
-            android:id="@+id/bonus_layout"
-            layout="@layout/view_purchase_bonus"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bonuses_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/big_margin"
-            android:layout_marginTop="@dimen/big_margin"
-            android:layout_marginEnd="@dimen/big_margin"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/content_main"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintVertical_chainStyle="packed"
-            />
-        <TextView
-            android:id="@+id/bonus_msg"
-            style="@style/TopUpTextStyle.Small.BonusText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/big_margin"
             android:layout_marginStart="@dimen/big_margin"
-            android:layout_marginTop="11dp"
             android:layout_marginEnd="@dimen/big_margin"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:text="@string/gamification_purchase_body"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bonus_layout"
-            app:layout_constraintVertical_bias="0"
-            />
+            >
+          <include
+              android:id="@+id/bonus_layout"
+              layout="@layout/view_purchase_bonus"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:visibility="invisible"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintVertical_bias="0"
+              app:layout_constraintVertical_chainStyle="packed"
+              />
 
-        <include
-            android:id="@+id/bonus_layout_skeleton"
-            layout="@layout/skeleton_rounded_rectangle"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@id/bonus_layout"
-            app:layout_constraintEnd_toEndOf="@id/bonus_layout"
-            app:layout_constraintStart_toStartOf="@id/bonus_layout"
-            app:layout_constraintTop_toTopOf="@id/bonus_layout"
-            />
-        <include
-            android:id="@+id/bonus_msg_skeleton"
-            layout="@layout/skeleton_rounded_rectangle"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="42dp"
-            android:layout_marginEnd="42dp"
-            app:layout_constraintBottom_toBottomOf="@id/bonus_msg"
-            app:layout_constraintTop_toTopOf="@id/bonus_msg"
-            />
-        <TextView
-            android:id="@+id/no_bonus_msg"
-            style="@style/TopUpTextStyle.Small.BonusText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/big_margin"
-            android:layout_marginTop="11dp"
-            android:layout_marginEnd="@dimen/big_margin"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:text="@string/purchase_poa_body"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/bottom_separator_buttons"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bottom_separator"
-            />
+          <include
+              android:id="@+id/level_up_bonus_layout"
+              layout="@layout/level_up_bonus_layout"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:visibility="gone"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintVertical_bias="0"
+              app:layout_constraintVertical_chainStyle="packed"
+              />
+
+          <TextView
+              android:id="@+id/bonus_msg"
+              style="@style/TopUpTextStyle.Small.BonusText"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="11dp"
+              android:layout_marginBottom="20dp"
+              android:gravity="center"
+              android:text="@string/gamification_purchase_body"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/bonus_layout"
+              app:layout_constraintVertical_bias="0"
+              />
+
+          <include
+              android:id="@+id/bonus_layout_skeleton"
+              layout="@layout/skeleton_rounded_rectangle"
+              android:layout_width="0dp"
+              android:layout_height="0dp"
+              app:layout_constraintBottom_toBottomOf="@id/bonus_layout"
+              app:layout_constraintEnd_toEndOf="@id/bonus_layout"
+              app:layout_constraintStart_toStartOf="@id/bonus_layout"
+              app:layout_constraintTop_toTopOf="@id/bonus_layout"
+              />
+          <include
+              android:id="@+id/bonus_msg_skeleton"
+              layout="@layout/skeleton_rounded_rectangle"
+              android:layout_width="match_parent"
+              android:layout_height="0dp"
+              android:layout_marginStart="42dp"
+              android:layout_marginEnd="42dp"
+              app:layout_constraintBottom_toBottomOf="@id/bonus_msg"
+              app:layout_constraintTop_toTopOf="@id/bonus_msg"
+              />
+          <TextView
+              android:id="@+id/no_bonus_msg"
+              style="@style/TopUpTextStyle.Small.BonusText"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="11dp"
+              android:layout_marginBottom="20dp"
+              android:gravity="center"
+              android:text="@string/purchase_poa_body"
+              android:visibility="invisible"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintBottom_toBottomOf="parent"
+              />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/bottom_separator_buttons"
@@ -310,9 +326,7 @@
             android:layout_marginTop="19dp"
             android:layout_marginBottom="8dp"
             android:background="@color/layout_separator_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bonus_msg"
+            app:layout_constraintTop_toBottomOf="@id/bonuses_layout"
             />
 
         <include
