--- a/app/src/main/res/layout/view_purchase_bonus.xml
+++ b/app/src/main/res/layout/view_purchase_bonus.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bonus_placeholder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -38,3 +37,4 @@
       />
 
 </LinearLayout>
+
