[MOB-865] Added missing action for referrals

--- a/app/src/main/res/layout/item_promotions_referrals.xml
+++ b/app/src/main/res/layout/item_promotions_referrals.xml
@@ -57,6 +57,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/share_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
