--- a/app/src/main/res/layout/level_up_bonus_layout.xml
+++ b/app/src/main/res/layout/level_up_bonus_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="8dp"
     app:cardElevation="1dp"
     app:cardUseCompatPadding="true"
@@ -67,7 +68,7 @@
           android:layout_marginTop="9dp"
           android:fontFamily="sans-serif"
           android:gravity="center_horizontal"
-          android:text="Level up in the next purchase"
+          tools:text="Level up in the next purchase"
           android:textColor="#001727"
           android:textSize="10sp"
           android:textStyle="normal"
