[feature/MOB-86] - 1- Create verified and unverified wallet chips and add them to "fragment_balance"; 2- Add wallet validation logic to BalanceInteract; 3- Add logic to BalanceFragmentPresenter to deal with the correct display of wallet validation information

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -563,5 +563,17 @@
     <item name="android:textSize">10sp</item>
   </style>
 
+  <style name="BalanceVerifyWalletChip" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textSize">10sp</item>
+  </style>
+
+  <style name="BalanceVerifyWalletChip.Unverified" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/appc_pink</item>
+  </style>
+
+  <style name="BalanceVerifyWalletChip.Verified" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/balance_wallet_verified_chip</item>
+  </style>
+
 
 </resources>
