[MOB-893] Implemented timer logic for bottomsheet.

--- a/app/src/main/res/layout/authentication_error_bottomsheet.xml
+++ b/app/src/main/res/layout/authentication_error_bottomsheet.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/authentication_bottomsheet_card"
     >
 
@@ -14,7 +15,7 @@
       android:layout_marginTop="36dp"
       android:layout_marginEnd="26dp"
       android:fontFamily="sans-serif-medium"
-      android:text="Authentication Failed"
+      android:text="@string/fingerprint_failed_title"
       android:textColor="#212121"
       android:textSize="20sp"
       android:textStyle="normal"
@@ -31,7 +32,7 @@
       android:layout_marginTop="9dp"
       android:layout_marginEnd="26dp"
       android:fontFamily="sans-serif-medium"
-      android:text="Error, try again!"
+      tools:text="Error, try again!"
       android:textColor="#939294"
       android:textSize="16sp"
       android:textStyle="normal"
@@ -54,7 +55,7 @@
       android:lineSpacingExtra="2sp"
       android:paddingTop="10dp"
       android:paddingBottom="10dp"
-      android:text="Got it!"
+      android:text="@string/got_it_button"
       android:textColor="@color/white"
       android:textSize="14sp"
       android:textStyle="normal"
