[MOB-865] Fixed no network in promotions. Updated promotions layout

--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -11,10 +11,9 @@
       android:id="@+id/rv_promotions"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_marginStart="@dimen/big_margin"
       android:layout_marginTop="@dimen/big_margin"
-      android:layout_marginEnd="@dimen/big_margin"
       android:orientation="vertical"
+      android:overScrollMode="never"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
