--- a/app/src/main/res/layout/item_promotions_default.xml
+++ b/app/src/main/res/layout/item_promotions_default.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/normal_margin"
+    android:layout_marginEnd="@dimen/normal_margin"
     app:cardBackgroundColor="#f8f8f8"
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp"
@@ -62,7 +64,9 @@
           android:layout_height="12dp"
           android:layout_gravity="center_vertical"
           android:layout_marginStart="@dimen/normal_margin"
+          android:layout_marginTop="@dimen/small_margin"
           android:layout_marginEnd="6dp"
+          android:layout_marginBottom="@dimen/small_margin"
           app:srcCompat="@drawable/ic_info_grey"
           />
 
