--- a/app/src/main/res/layout/item_promotions_gamification.xml
+++ b/app/src/main/res/layout/item_promotions_gamification.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/normal_margin"
+    android:layout_marginEnd="@dimen/normal_margin"
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp"
     app:cardUseCompatPadding="true"
@@ -108,6 +110,7 @@
           android:layout_marginTop="@dimen/small_margin"
           android:layout_marginEnd="@dimen/normal_margin"
           android:orientation="vertical"
+          android:overScrollMode="never"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
