--- a/app/src/main/res/layout/item_promotions_future.xml
+++ b/app/src/main/res/layout/item_promotions_future.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/big_margin"
+    android:layout_marginEnd="@dimen/big_margin"
     android:background="@drawable/promotions_future_background"
     android:paddingBottom="@dimen/normal_margin"
     >
@@ -54,7 +56,9 @@
         android:layout_height="12dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="@dimen/small_margin"
         android:layout_marginEnd="6dp"
+        android:layout_marginBottom="@dimen/small_margin"
         app:srcCompat="@drawable/ic_clock"
         />
 
