--- a/app/src/main/res/layout/item_promotions_title.xml
+++ b/app/src/main/res/layout/item_promotions_title.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/big_margin"
+    android:layout_marginEnd="@dimen/big_margin"
     >
 
   <TextView
